[package]
name = "sda-stresstest"
version = "0.1.0"
authors = ["Morten Dahl"]

[dependencies]
sodiumoxide = "0.0.12"
threshold-secret-sharing = "0.1.1"
paillier = { git="ssh://git@github.com/snipsco/rust-paillier.git" }
byteorder = "0.5.3"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "analytics"
harness = false

[[bench]]
name = "ratings"
harness = false
