[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Morten Dahl <mortendahlcs@gmail.com>"]

[dependencies]
sodiumoxide = "0.0.12"
threshold-secret-sharing = "0.1"
paillier = "0.1"
byteorder = "0.5.3"

[dev-dependencies]
bencher = "0.1"
# bencher = { git="https://github.com/snipsco/bencher.git" }

[[bench]]
name = "analytics"
harness = false

[[bench]]
name = "ratings"
harness = false
